# brofile

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
app-context/: CMakeLists.txt
app-context/include/app_context/: app_context.hpp
app-context/src/: app_context.cpp
brofile-tui/: CMakeLists.txt  brofile-tui.desktop
brofile-tui/include/brofile-tui/: brofile_tui.hpp
brofile-tui/src/: brofile_tui.cpp  main.cpp
libbrofile/: CMakeLists.txt
libbrofile/include/brofile/: browser_base.hpp  browser_factory.hpp  browser_profile_info.hpp  browser_type.hpp  firefox.hpp  firefox_container_info.hpp  logging.hpp  scanner.hpp
libbrofile/private_include/brofile_private/browsers/: chromium.hpp  firefox.hpp
libbrofile/private_include/brofile_private/tools/: ini_tools.hpp
libbrofile/src/: browser_base.cpp  browser_factory.cpp  chromium.cpp  firefox.cpp  ini_tools.cpp  logging.cpp  scanner.cpp
